styles/base.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Rubik", sans-serif;
    background-color: whitesmoke;
    color: black;
}

header {
    background-color: rgb(120, 164, 229);
    color: black;
}

#course-title {
    display: block;
    text-align: center;
    padding: 1rem;
    font-weight: 600;
}

nav {
    display: flex;
    justify-content: space-around;
    background-color: rgb(189, 208, 215);
}

nav a {
    color: black;
    text-decoration: none;
    padding: 1rem;
}

nav a:hover {
    background-color: gray;
}

main {
    max-width: 1100px;
    margin: 0 auto;
    padding: 1rem;
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: 1rem;
}

h1 {
    grid-column: 1 / 3;
    text-align: center;
    margin-bottom: 1rem;
    font-size: 2rem;
}

.card {
    background-color: white;
    border: 1px solid #ccc;
    border-radius: 10px;
    overflow: hidden;
}

.card h2 {
    background-color: rgb(120, 164, 229);
    color: black;
    text-align: center;
    padding: 0.8rem;
}

.card h3 {
    text-align: center;
    margin-top: 1rem;
    border-bottom: 1px solid #ccc;
    padding-bottom: 0.5rem;
}

.about {
    display: flex;
    gap: 1rem;
    padding: 1rem;
    align-items: center;
}

.about img {
    width: 150px;
    height: auto;
}

.location {
    display: flex;
    gap: 1rem;
    padding: 1rem;
    align-items: center;
}

.location img {
    width: 150px;
}

figure {
    text-align: center;
    font-size: 0.9rem;
}

.card ul {
    padding: 2rem;
    margin-top: 2rem;
}

.card li {
    margin-bottom: 1rem;
}

footer {
    background-color: rgb(120, 164, 229);
    color: black;
    text-align: center;
    padding: 1rem;
    margin-top: 1rem;
}

#lastModified {
    color: rgb(247, 247, 176);
    margin-top: 0.5rem;
}

